syntax = "proto3";

package user_serve;

option go_package = ".;admin_user";
service AdminUser {
  rpc AdminUserlogin(AdminUserRequest) returns (AdminUserResponse){}
  rpc FrontUserList(FrontUsersRequest) returns (FrontUsersResponse){}

}

message AdminUserRequest {
  string username = 1;
  string password = 2;
}

message AdminUserResponse {
  int32 code = 1;
  string msg = 2;
  string user_name = 3;
}

message FrontUsersRequest {
  int32 current_page = 1;
  int32 pagesize = 2;

}

message FrontUsersResponse {
  int32 code = 1;
  string msg = 2;
  repeated FrontUser front_users = 3;
  int32 total = 4;
  int32 current = 5;
  int32 page_size = 6;
}

message FrontUser{
  string email = 1;
  string desc = 2;
  string status = 3;
  string create_time = 4;

}



// protoc --go_out=. --micro_out=. proto/admin_user/admin_user.proto

//protoc --go_out=. --micro_out=. admin_user.proto